<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Guillaume EHRET

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/grey_background_pattern"
              android:padding="8dp"
        >

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingLeft="5px"
            style="@style/myCalendarTitle"
            android:text="@string/tweetpres"/>

    <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tweetincitation"
            style="@style/myTextView"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            style="@style/myTextView"
            />
    <fragment android:name="com.ehret.mixit.fragment.TwitterFragment"
              android:id="@+id/tweets"
              android:layout_width="match_parent"
              android:layout_height="fill_parent">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
            <ProgressBar style="@android:style/Widget.ProgressBar.Small"
                         android:id="@+id/tweetprogressbar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onload"
                    style="@style/myTextView"
                    android:lines="2"
                    android:id="@+id/searchTweet"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/tweetprogressbar"
                    />
        </RelativeLayout>
    </fragment>
</LinearLayout>

